# av_kufar_bot

./: .gitignore  Dockerfile  main.py  pyproject.toml
teleg/bot/: admin.py  core.py  helpers.py  keyboard.py  set_handlers.py  states.py
teleg/database/: __init__.py
teleg/parser/: helpers_pars.py  pars_data.py
